--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,43 @@
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import './global/global.css';
+@import './utilidades/tipografia.css';
+@import './utilidades/cores.css';
 
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
+@import './global/header.css';
+@import './global/footer.css';
 
-a {
-  text-decoration: none;
-}
+@import './utilidades/componentes.css';
+@import './utilidades/formulario.css';
 
-.header-bg {
-  background-color: #000000;
+/* Home */
+@import './home/introducao.css';
+@import './home/tecnologia.css';
+@import './home/parceiros.css';
+@import './home/depoimento.css';
 
-}
+/* bicicletas */
+@import './bicicletas/bicicletas-lista.css';
+@import './bicicletas/bicicletas.css';
 
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+/* bicicleta */
+@import './bicicleta/bicicleta.css';
+@import './bicicleta/seguro.css';
 
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
+/* Seguros */
+@import './seguros/seguros.css';
+@import './seguros/vantagens.css';
+@import './seguros/perguntas.css';
 
-.header-menu a {
-  color: #ffffff;
-  display: inline-block;
-  padding: 16px 0;
-  font-size: 18px;
-  position: relative;
-}
+/* contato */
+@import './contato/contato.css';
+@import './contato/lojas.css';
 
-.header-menu a::after {
-  content: '';
-  display: block;
-  height: 2px;
-  width: 0px;
-  background: #ffffff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
+/* Orçamento */
+@import './orcamento/orcamento.css';
 
-.header-menu a:hover:after {
-  width: 100%;
-}
+/* Termos */
+@import './termos/termos.css';
 
-@media (max-width: 800px) {
-  .header-menu{
-    gap: 20px;
-  }
-  .header-menu a {
-    background: #111111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background-color: #2e2e2e;
-  }
-  .header a:after{
-    display: none;
-  }
-}
 
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
+
+
+
